<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:minWidth="400dp"
    android:theme="@style/MyTheme">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/spidlogo"
        android:adjustViewBounds="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:contentDescription="@string/spid_logo" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text_holo_light"
        android:textColor="#000000"
        android:hint="@string/email"
        android:id="@+id/dialog_login_edittext_username"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text_holo_light"
        android:textColor="#000000"
        android:hint="@string/password"
        android:id="@+id/dialog_login_edittext_password"
        android:inputType="textPassword" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
        android:text="@string/login_to_spid"
        android:id="@+id/dialog_login_button_login" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/back"
        android:id="@+id/dialog_login_back_button"
        style="@android:style/Widget.Holo.Light.Button.Borderless.Small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/use_this_service_agreement"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/dialog_login_textview_termslink"
        android:text="@string/terms_of_use"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

</LinearLayout>